# muininn

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  setup.py
src/muininn/: __init__.py  __main__.py
